Drawing boxes works /o/

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB LIGHTDB_CORE_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/core/*/include/")
 include_directories(${LIGHTDB_CORE_INCLUDE_DIRS})
 
 # Get test source files
-file(GLOB_RECURSE LIGHTDB_TEST_SOURCES "src/*.cc")
+file(GLOB_RECURSE LIGHTDB_TEST_SOURCES "src/*VisitorTests.cc")
 
 # Build tests
 add_executable(lightdb_test EXCLUDE_FROM_ALL ${LIGHTDB_TEST_SOURCES})
