Start SQLite stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,10 @@ find_package(GPAC REQUIRED)
 include_directories(SYSTEM ${GPAC_INCLUDE_DIRS})
 set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${GPAC_LIBRARIES})
 
+find_library(SQLITE3_LIBRARY sqlite3)
+message("INCLUDES: ${SQLITE3_LIBRARY}")
+set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${SQLITE3_LIBRARY})
+
 # Build LightDB library
 add_subdirectory(core)
 
