--- a/protobuf/CMakeLists.txt
+++ b/protobuf/CMakeLists.txt
@@ -1,4 +1,4 @@
 file(GLOB protos *.proto)
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER "${protos}")
-add_library(lightdb_protobuf ${PROTO_HEADER} ${PROTO_SRC})
+add_library(lightdb_protobuf SHARED ${PROTO_HEADER} ${PROTO_SRC})
