Include tile configuration in mp4 box

--- a/protobuf/CMakeLists.txt
+++ b/protobuf/CMakeLists.txt
@@ -1,4 +1,6 @@
 file(GLOB protos *.proto)
 
 protobuf_generate_cpp(PROTO_SRC PROTO_HEADER "${protos}")
+message("Header: ${PROTO_HEADER}")
+message("Src: ${PROTO_SRC}")
 add_library(lightdb_protobuf SHARED ${PROTO_HEADER} ${PROTO_SRC})
