--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,25 +37,25 @@ file(GLOB LIGHTDB_PLUGIN_DIRS ${CMAKE_SOURCE_DIR}/plugins/*)
 get_property(LIGHTDB_INCLUDES DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
 string(REPLACE ";" "|" LIGHTDB_INCLUDES_STRING "${LIGHTDB_INCLUDES}")
 
-foreach(LIGHTDB_PLUGIN_DIR ${LIGHTDB_PLUGIN_DIRS})
-    if (IS_DIRECTORY ${LIGHTDB_PLUGIN_DIR})
-        get_filename_component(LIGHTDB_PLUGIN_NAME ${LIGHTDB_PLUGIN_DIR} NAME_WE)
-        string(TOLOWER "${LIGHTDB_PLUGIN_DIR}/cmake-build-${CMAKE_BUILD_TYPE}" LIGHTDB_PLUGIN_BINARY_DIR)
-        ExternalProject_Add(
-                ${LIGHTDB_PLUGIN_NAME}
-                PREFIX ${LIGHTDB_PLUGIN_DIR}
-                SOURCE_DIR ${LIGHTDB_PLUGIN_DIR}
-                BINARY_DIR ${LIGHTDB_PLUGIN_BINARY_DIR}
-                INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/plugins
-                LIST_SEPARATOR |
-                CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DLIGHTDB_INCLUDES:list=${LIGHTDB_INCLUDES_STRING}
-                EXCLUDE_FROM_ALL TRUE
-                BUILD_ALWAYS TRUE
-                INSTALL_COMMAND ""
-        )
-        add_dependencies(lightdb_test ${LIGHTDB_PLUGIN_NAME})
-    endif(IS_DIRECTORY ${LIGHTDB_PLUGIN_DIR})
-endforeach(LIGHTDB_PLUGIN_DIR)
+#foreach(LIGHTDB_PLUGIN_DIR ${LIGHTDB_PLUGIN_DIRS})
+#    if (IS_DIRECTORY ${LIGHTDB_PLUGIN_DIR})
+#        get_filename_component(LIGHTDB_PLUGIN_NAME ${LIGHTDB_PLUGIN_DIR} NAME_WE)
+#        string(TOLOWER "${LIGHTDB_PLUGIN_DIR}/cmake-build-${CMAKE_BUILD_TYPE}" LIGHTDB_PLUGIN_BINARY_DIR)
+#        ExternalProject_Add(
+#                ${LIGHTDB_PLUGIN_NAME}
+#                PREFIX ${LIGHTDB_PLUGIN_DIR}
+#                SOURCE_DIR ${LIGHTDB_PLUGIN_DIR}
+#                BINARY_DIR ${LIGHTDB_PLUGIN_BINARY_DIR}
+#                INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/plugins
+#                LIST_SEPARATOR |
+#                CMAKE_ARGS -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DLIGHTDB_INCLUDES:list=${LIGHTDB_INCLUDES_STRING}
+#                EXCLUDE_FROM_ALL TRUE
+#                BUILD_ALWAYS TRUE
+#                INSTALL_COMMAND ""
+#        )
+#        add_dependencies(lightdb_test ${LIGHTDB_PLUGIN_NAME})
+#    endif(IS_DIRECTORY ${LIGHTDB_PLUGIN_DIR})
+#endforeach(LIGHTDB_PLUGIN_DIR)
 
 # Copy modules to output directory
 ADD_CUSTOM_COMMAND(TARGET lightdb_test
