--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,17 @@ include_directories(${LIGHTDB_TEST_INCLUDE_DIRS})
 file(GLOB LIGHTDB_CORE_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/core/*/include/")
 include_directories(${LIGHTDB_CORE_INCLUDE_DIRS})
 
+# Probabilistic predicates stuff
+set(PP_DIR "/home/maureen/PPdemo")
+file(GLOB PP_SOURCE_DIRS "${PP_DIR}/lib/*")
+list(REMOVE_ITEM PP_SOURCE_DIRS "${PP_DIR}/lib/Makefile")
+message("PP_SOURCE_DIRS: ${PP_SOURCE_DIRS}")
+include_directories(${PP_SOURCE_DIRS})
+file(GLOB PP_LIBS "${PP_DIR}/bin/*.so")
+message("PP_LIBS: ${PP_LIBS}")
+set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${PP_LIBS})
+link_directories("${PP_DIR}/bin/")
+
 # Get test source files
 file(GLOB_RECURSE LIGHTDB_TEST_SOURCES "src/*VisitorTests.cc" "src/*KeyframePlacementTests.cc" "src/*UnknownWorkloadTests.cc" "src/*CreateLayoutsTest.cc"
         "src/*BlazeItTests.cc"
