Comment out stuff in cmake files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,15 +101,15 @@ message("INCLUDES: ${SQLITE3_LIBRARY}")
 set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${SQLITE3_LIBRARY})
 
 # Probabilistic predicates stuff
-set(PP_DIR "/home/maureen/PPdemo")
-file(GLOB PP_SOURCE_DIRS "${PP_DIR}/lib/*")
-list(REMOVE_ITEM PP_SOURCE_DIRS "${PP_DIR}/lib/Makefile")
-message("PP_SOURCE_DIRS: ${PP_SOURCE_DIRS}")
-include_directories(SYSTEM ${PP_SOURCE_DIRS})
-file(GLOB PP_LIBS "${PP_DIR}/bin/*.so")
-message("PP_LIBS: ${PP_LIBS}")
-set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${PP_LIBS})
-link_directories("${PP_DIR}/bin/")
+#set(PP_DIR "/home/maureen/PPdemo")
+#file(GLOB PP_SOURCE_DIRS "${PP_DIR}/lib/*")
+#list(REMOVE_ITEM PP_SOURCE_DIRS "${PP_DIR}/lib/Makefile")
+#message("PP_SOURCE_DIRS: ${PP_SOURCE_DIRS}")
+#include_directories(SYSTEM ${PP_SOURCE_DIRS})
+#file(GLOB PP_LIBS "${PP_DIR}/bin/*.so")
+#message("PP_LIBS: ${PP_LIBS}")
+#set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} ${PP_LIBS})
+#link_directories("${PP_DIR}/bin/")
 
 include_directories(/usr/local/cudnn/include)
 
