Add SaveToArray operator to save decoded frames in a numpy format.
It's current implementation eats the decoded frames because I'm lazy,
but it would be possible to pass them on.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,13 @@ set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3 -fvisibility=hidden -Wall  -Wextra -Wn
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-O2 -g -DNDEBUG -Wall -Wextra -Wno-unused-parameter")
 set(CMAKE_CXX_FLAGS_COVERAGE "-DDEBUG --coverage -g3 -Wall -Wextra -Wno-unused-parameter")
 
+# NPP
+include_directories(/usr/local/cuda/include)
+link_directories(/usr/local/cuda/lib64)
+
 # Find required library dependencies
-set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} nvcuvid dl pthread glog gflags stdc++fs)
+set(LIGHTDB_LIB_DEPENDENCIES ${LIGHTDB_LIB_DEPENDENCIES} nvcuvid dl pthread glog gflags stdc++fs
+        nppicc nppig nppidei nppial)
 
 include(cmake/nvenc.cmake)
 
