Fix some tiling/encoding issues
- targetWidth/Height should be the display dimensions. Fix that in a few
places. For now, override codedWidth()/codedHeight() to be the display dimensions.
- Make sure middle row/column dimensions are divisible by 32.

--- a/HomomorphicStitching/stitcher/CMakeLists.txt
+++ b/HomomorphicStitching/stitcher/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(STITCHER_FILES SliceSegmentLayer.cpp SliceSegmentLayer.h TileStitcher.cpp TileStitcher.h Opaque.cpp Opaque.h Nal.cpp Nal.h Headers.h Headers.cpp BitStream.h PictureParameterSet.h VideoParameterSet.h BitStream.cpp NalType.h BitArray.h PictureParameterSet.cpp VideoParameterSet.cpp Profile.h Profile.cpp SequenceParameterSet.h SequenceParameterSet.cpp Emulation.h Emulation.cpp BitArray.cpp AccessDelimiter.cpp AccessDelimiter.h Context.cpp Context.h Golombs.cpp Golombs.h)
 
-add_executable(stitcher main.cpp ${STITCHER_FILES})
-target_link_libraries(stitcher)
+#add_executable(stitcher main.cpp ${STITCHER_FILES})
+#target_link_libraries(stitcher)
 
 add_library(stitcherlib ${STITCHER_FILES})
