Move regret accumulator to utility file

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,7 +26,10 @@ include_directories(${LIGHTDB_CORE_INCLUDE_DIRS})
 
 # Get test source files
 file(GLOB_RECURSE LIGHTDB_TEST_SOURCES
-#        "src/*VisitorTests.cc" "src/*KeyframePlacementTests.cc" "src/*UnknownWorkloadTests.cc" "src/*CreateLayoutsTest.cc"
+#        "src/*VisitorTests.cc"
+#        "src/*KeyframePlacementTests.cc"
+        "src/*UnknownWorkloadTests.cc"
+#        "src/*CreateLayoutsTest.cc"
 #        "src/*BlazeItTests.cc"
 #        "src/*PredicateTests.cc"
         "src/*VisualRoadTests.cc")
