--- a/tasm/CMakeLists.txt
+++ b/tasm/CMakeLists.txt
@@ -18,15 +18,21 @@ message("sources: ${TASM_SOURCES}")
 # Compile sources with PIC
 add_library(tasm OBJECT ${TASM_SOURCES})
 set_property(TARGET tasm PROPERTY POSITION_INDEPENDENT_CODE ON)
+# Set target architectures.
+set_property(TARGET tasm PROPERTY CUDA_ARCHITECTURES OFF)
 
 # Create static library
 add_library(tasm_static STATIC $<TARGET_OBJECTS:tasm>)
 set_target_properties(tasm_static PROPERTIES OUTPUT_NAME "tasm")
+# Set target architectures.
+set_property(TARGET tasm_static PROPERTY CUDA_ARCHITECTURES OFF)
 
 # Create dynamic library
 add_library(tasm_shared SHARED $<TARGET_OBJECTS:tasm>)
 set_target_properties(tasm_shared PROPERTIES OUTPUT_NAME "tasm")
 target_link_libraries(tasm_shared ${TASM_LIB_DEPENDENCIES})
+# Set target architectures.
+set_property(TARGET tasm_shared PROPERTY CUDA_ARCHITECTURES OFF)
 
 # Install libraries
 install(
