--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,11 +49,8 @@ set(TASM_LIB_DEPENDENCIES ${TASM_LIB_DEPENDENCIES} ${CUDA_CUDA_LIBRARY} ${CUDA_n
 find_package(PythonLibs 3)
 include_directories(SYSTEM ${PYTHON_INCLUDE_DIRS})
 
-find_package(Boost 1.64 COMPONENTS python filesystem system REQUIRED)
-include_directories(SYSTEM ${Boost_INCLUDE_DIR})
-set(TASM_LIB_DEPENDENCIES ${TASM_LIB_DEPENDENCIES} ${Boost_LIBRARIES})
-
 find_package(FFmpeg REQUIRED COMPONENTS AVCODEC AVFORMAT AVUTIL SWSCALE)
+message("FFMPEG dirs: ${FFMPEG_INCLUDE_DIRS} ${FFMPEG_LIBRARIES}")
 include_directories(SYSTEM ${FFMPEG_INCLUDE_DIRS})
 set(TASM_LIB_DEPENDENCIES ${TASM_LIB_DEPENDENCIES} ${FFMPEG_LIBRARIES})
 
