Finish docker file
- Downgrade GPAC so we can use the flag combination that makes the decoder work
- Upgrade FFmpeg so we get the newer versions of the libraries

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,4 +7,4 @@ ENV NVIDIA_DRIVER_CAPABILITIES compute,utility,video
 COPY . /tasm
 
 RUN mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make
-RUN cd python
+WORKDIR /tasm/build/python
