Work on example notebook
- The Dockerfile will have to be cleaned up with some steps moved to the
environment file, but I'll do that once all of the packages are finalized.
- Install the python library so we can use it from other locations.
- Start a Jupyter notebook under python/Examples that walks through the usage.
- Add a sample video/detections to start with.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,19 @@ MAINTAINER Maureen Daum "mdaum@cs.washington.edu"
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility,video
 
+
 COPY . /tasm
 
 RUN mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .. && make
-WORKDIR /tasm/build/python
+
+# TODO: Run installation as part of CMake
+RUN python3 -m pip install --upgrade pip && \
+    python3 -m pip install setuptools wheel jupyter notebook opencv-python pandas && \
+    python3 -m pip install --upgrade nbconvert && \
+    cd python/python_package && \
+    python3 setup.py sdist bdist_wheel && \
+    pip3 install -e .
+
+RUN apt-get update && apt-get install -y libopencv-dev python-opencv
+
+WORKDIR /tasm/python/Examples
