Add optimized version of stitcher
Update the standalone stitcher to use the better library.

--- a/HomomorphicStitching/stitcher/CMakeLists.txt
+++ b/HomomorphicStitching/stitcher/CMakeLists.txt
@@ -1,10 +1,13 @@
-project(LightDB)
+project(HomomorphicStitching)
 
-cmake_minimum_required(VERSION 3.5)
-set(CMAKE_CXX_STANDARD 11)
-#add_subdirectory(lib/googletest-master)
-#include_directories(lib/googletest-master/googletest/include)
-#include_directories(lib/googletest-master/googlemock/include)
+cmake_minimum_required(VERSION 3.10)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(stitcher main.cpp SliceSegmentLayer.cpp SliceSegmentLayer.h Stitcher.cpp Stitcher.h Opaque.cpp Opaque.h Nal.cpp Nal.h Headers.h Headers.cpp BitStream.h PictureParameterSet.h VideoParameterSet.h BitStream.cpp NalType.h BitArray.h PictureParameterSet.cpp VideoParameterSet.cpp Profile.h Profile.cpp SequenceParameterSet.h SequenceParameterSet.cpp Emulation.h Emulation.cpp BitArray.cpp AccessDelimiter.cpp AccessDelimiter.h Context.cpp Context.h Golombs.cpp Golombs.h)
-target_link_libraries(stitcher)
+add_executable(stitcher main.cpp)
+
+message(${CMAKE_SOURCE_DIR})
+
+set(STITCHING_LIB_DIR ../../homomorphic_stitching)
+add_subdirectory(${STITCHING_LIB_DIR} homomorphic_stitching)
+include_directories(${STITCHING_LIB_DIR}/include)
+target_link_libraries(stitcher homomorphic_stitching)
