--- a/docker/Dockerfile.environment
+++ b/docker/Dockerfile.environment
@@ -3,30 +3,20 @@ MAINTAINER Maureen Daum "mdaum@cs.washington.edu"
 
 ARG CUDA_URL=https://developer.nvidia.com/compute/cuda/9.0/Prod/local_installers/cuda_9.0.176_384.81_linux-run
 ARG GPAC_URL=https://github.com/gpac/gpac/archive/v0.7.1.tar.gz
-ARG INTEL_REPOSITORY_URL=https://apt.repos.intel.com/setup/intelproducts.list
-ARG INTEL_KEY_URL=https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
 ARG CMAKE_KEY_URL=https://apt.kitware.com/keys/kitware-archive-latest.asc
 ARG CMAKE_REPOSITORY_URL=https://apt.kitware.com/ubuntu/
 
 # Update timezone
-RUN apt-get update && apt-get install -y gnupg tzdata wget
-RUN dpkg-reconfigure -f noninteractive tzdata
-
-# Install Intel IPP
-RUN wget $INTEL_REPOSITORY_URL -O intelproducts.list
-RUN wget $INTEL_KEY_URL -O intel-key.pub
-RUN grep -v intelpython intelproducts.list > /etc/apt/sources.list.d/intelproducts.list # intelpython repo is broken
-RUN apt-key add intel-key.pub
-RUN apt-get update
-RUN apt install -y intel-ipp-2019.3-062
+RUN apt-get update && apt-get install -y gnupg tzdata wget && \
+    dpkg-reconfigure -f noninteractive tzdata
 
 # Install cmake repository
-RUN wget $CMAKE_KEY_URL -O cmake-key.pub
-RUN apt-key add cmake-key.pub
-RUN echo deb $CMAKE_REPOSITORY_URL bionic main > /etc/apt/sources.list.d/cmake.list
-RUN apt-get update
-RUN apt search cmake
-RUN apt-get install -y cmake
+RUN wget $CMAKE_KEY_URL -O cmake-key.pub && \
+    apt-key add cmake-key.pub && \
+    echo deb $CMAKE_REPOSITORY_URL bionic main > /etc/apt/sources.list.d/cmake.list && \
+    apt-get update && \
+    apt search cmake && \
+    apt-get install -y cmake
 
 # Install apt dependencies
 RUN apt-get install \
@@ -48,7 +38,10 @@ RUN apt-get install \
       libsqlite3-dev \
       vim \
       less \
-      software-properties-common
+      software-properties-common \
+      libopencv-dev \
+      python-opencv && \
+      apt-get clean
 
 RUN add-apt-repository ppa:jonathonf/ffmpeg-4 && \
     apt-get update && \
@@ -74,13 +67,14 @@ RUN wget $CUDA_URL -q -O cuda.run && \
     rm cuda.run
 
 # Set gcc-8 to be default compiler
-RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-8
-
 # Set gcc-6 to be the compiler for cuda
-RUN ln -s /usr/bin/gcc-6 /usr/local/cuda/bin/gcc
-RUN ln -s /usr/bin/g++-6 /usr/local/cuda/bin/g++6
+RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 100 --slave /usr/bin/g++ g++ /usr/bin/g++-8 && \
+    ln -s /usr/bin/gcc-6 /usr/local/cuda/bin/gcc && \
+    ln -s /usr/bin/g++-6 /usr/local/cuda/bin/g++6
 
-RUN pip3 install numpy matplotlib
+RUN python3 -m pip install --upgrade pip && \
+    python3 -m pip install setuptools wheel jupyter notebook opencv-python pandas numpy matplotlib && \
+    python3 -m pip install --upgrade nbconvert
 
 # Install boost python
 RUN cd /usr/src && \
