--- a/docker/Dockerfile.environment
+++ b/docker/Dockerfile.environment
@@ -19,7 +19,7 @@ RUN wget $CMAKE_KEY_URL -O cmake-key.pub && \
     apt-get install -y cmake
 
 # Install apt dependencies
-RUN DEBIAN_FRONTEND=noninteractive apt-get install \
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install \
         -y \
         --no-install-recommends \
       ca-certificates \
@@ -78,7 +78,7 @@ RUN python3 -m pip install --upgrade pip && \
 
 # Install boost python
 RUN cd /usr/src && \
-    wget --no-verbose https://dl.bintray.com/boostorg/release/1.75.0/source/boost_1_75_0.tar.gz && \
+    wget --no-verbose https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.tar.gz && \
     tar xzf boost_1_75_0.tar.gz && \
     cd boost_1_75_0 && \
     ./bootstrap.sh --with-python=$(which python3) && \
